# jenkins-testing

./: Jenkinsfile  pyproject.toml
app/: service.py
tests/: unit.py
